--- a/portfolio/src/app/about/about.component.html
+++ b/portfolio/src/app/about/about.component.html
@@ -2,37 +2,28 @@
 	<div class="wrapper">
 		<div class="centered">
 			<div style="margin: 0 auto">
-        <div class="col-md-4 box">
-        <div class="card" routerLink="/web">
-          <img class="card-img-top img-fluid" src="./assets/img/code.jpg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-			<div class="col-md-4 box">
-        <div class="card card-inverse" style="background-color: #333; border-color: #333;">
-          <img class="card-img-top img-fluid" src="./assets/img/moto.jpg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-			<div class="col-md-4 box">
-        <div class="card">
-          <img class="card-img-top img-fluid" src="./assets/img/piano.jpg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      </div>
+				<div class="col-md-4 box">
+					<div class="card card-inverse webdev" routerLink="/web">
+						<div class="card-block">
+							<h4 class="card-title ">Web Development</h4>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 box">
+					<div class="card card-inverse cooking" routerLink="/cooking">
+						<div class="card-block">
+							<h4 class="card-title ">Gotowanie</h4>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 box">
+					<div class="card card-inverse music" routerLink="/music">
+						<div class="card-block">
+							<h4 class="card-title ">Muzyka</h4>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
