--- a/portfolio/src/app/about/about.component.scss
+++ b/portfolio/src/app/about/about.component.scss
@@ -6,6 +6,7 @@ app-about{
 .content{
   /*background-position: center;
   background-size: contain;*/
+  background-color: rgba(0, 0, 0, 0.62);
   width: 100%;
   height: 100vh;
   .wrapper{
@@ -20,30 +21,51 @@ app-about{
       margin-right: auto;
       height: 395px;
       .box{
-        height: 500px;
+        /*height: 500px;*/
         .box-margin{
           transition: 300ms;
           margin: 40px;
           background-color: lightgray;
-          height: 100%;
           &:hover{
             transform: scale(1.1);
           }
         }
         .webdev{
-          // background: url('./assets/img/angular.svg') center center no-repeat;
-          background-color: rgba(0, 0, 0, 0.62);
-        }
-        .moto{
-          // background: url('./assets/img/moto.jpg') right -68px center no-repeat;
-          background-color: rgba(0, 0, 0, 0.62);
+           background: url('./assets/img/coding.jpg') ;
         }
         .music{
-          // background: url('./assets/img/piano.jpg') center center no-repeat;
+           background: url('./assets/img/guitar.jpg') ;
+        }
+        .cooking{
+           background: url('./assets/img/cooking.jpg') ;
+        }
+        .card {
+          
+          background-repeat: no-repeat;
           background-color: rgba(0, 0, 0, 0.62);
+         
+          @media(min-width: 765px) {
+            background-size: auto 100%;
+            height: 500px;
+            padding-top: 200px;
+          }
+           @media(max-width: 765px) {
+            background-size: 100% auto;
+            height: 200px;
+            margin-top: 0px;
+          }
+          .card-title{
+            clear: both;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.62); 
+            padding:2px 5px;
+             
+          }
         }
       }
     }
   }
-    
+  @media(max-width: 765px) {
+    margin-top: -150px;
+  }
 }
