--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,8 +1,3 @@
-<app-nav></app-nav>
-<!--<ul>
-  <li class="text" *ngFor="let item of items | async">
-    {{item.$value}}
-  </li>
-</ul>-->
-<!-- Routed views -->
-<router-outlet id="heroState"></router-outlet>
+<!--<app-nav></app-nav>-->
+
+<router-outlet></router-outlet>
