--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -1,38 +1,10 @@
 <div class="content">
 	<div class="wrapper">
 		<div class="centered">
-			<div style="margin: 0 auto">
-        <div class="col-md-4 box">
-        <div class="card" routerLink="/web">
-          <img class="card-img-top img-fluid" src="./assets/img/code.jpg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.dfghdfghfdgh</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-			<div class="col-md-4 box">
-        <div class="card card-inverse" style="background-color: #333; border-color: #333;">
-          <img class="card-img-top img-fluid" src="./assets/img/moto.jpg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-			<div class="col-md-4 box">
-        <div class="card">
-          <img class="card-img-top img-fluid" src="./assets/img/piano.jpg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      </div>
+			<div class="greeting">Witaj na moim portfolio!</div>
+			<img src="./assets/img/face.jpg" class="img-thumbnail rounded mx-auto d-block" alt="face">
+			<div class="describing">Nazywam się Michał Niemiec i wiele robię w życiu. </div>
+			<a href="about" class="myButton">Dalej</a>
 		</div>
 	</div>
 </div>
