--- a/portfolio/src/app/about/about.component.scss
+++ b/portfolio/src/app/about/about.component.scss
@@ -1,65 +1,63 @@
-app-about{
-      width: 100%;
-      position: absolute;
+app-about {
+  width: 100%;
+  position: absolute;
 }
 
-.content{
+.content {
   /*background-position: center;
   background-size: contain;*/
   background-color: rgba(0, 0, 0, 0.62);
   width: 100%;
   height: 100vh;
-  .wrapper{
+  .wrapper {
     position: absolute;
     top: 50%;
-    margin-top: -250px;/* half of #content height*/
+    margin-top: -250px;
+    /* half of #content height*/
     left: 0;
     width: 100%;
-    .centered{
+    .centered {
       width: 100%;
       margin-left: auto;
       margin-right: auto;
       height: 395px;
-      .box{
+      .box {
         /*height: 500px;*/
-        .box-margin{
+        .box-margin {
           transition: 300ms;
           margin: 40px;
           background-color: lightgray;
-          &:hover{
+          &:hover {
             transform: scale(1.1);
           }
         }
-        .webdev{
-           background: url('./assets/img/coding.jpg') ;
+        .webdev {
+          background: url('./assets/img/coding.jpg');
         }
-        .music{
-           background: url('./assets/img/guitar.jpg') ;
+        .music {
+          background: url('./assets/img/guitar.jpg');
         }
-        .cooking{
-           background: url('./assets/img/cooking.jpg') ;
+        .cooking {
+          background: url('./assets/img/cooking.jpg');
         }
         .card {
-          
           background-repeat: no-repeat;
           background-color: rgba(0, 0, 0, 0.62);
-         
           @media(min-width: 765px) {
             background-size: auto 100%;
             height: 500px;
             padding-top: 200px;
           }
-           @media(max-width: 765px) {
+          @media(max-width: 765px) {
             background-size: 100% auto;
             height: 200px;
             margin-top: 0px;
           }
-          .card-title{
+          .card-title {
             clear: both;
             text-align: center;
-            background: rgba(0, 0, 0, 0.62); 
-            padding:2px 5px;
-             
+            background: rgba(0, 0, 0, 0.62);
+            padding: 2px 5px;
           }
         }
       }
