--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -1,10 +1,12 @@
+<app-nav></app-nav>
+
 <div class="content">
-	<div class="wrapper">
-		<div class="centered">
-			<div class="greeting">Witaj na moim portfolio!</div>
-			<img src="./assets/img/face.jpg" class="img-thumbnail rounded mx-auto d-block" alt="face">
-			<div class="describing">Nazywam się Michał Niemiec i wiele robię w życiu. </div>
-			<a href="about" class="myButton">Dalej</a>
-		</div>
-	</div>
+  <div class="wrapper">
+    <div class="centered">
+      <div class="greeting">Witaj na moim portfolio!</div>
+      <img src="./assets/img/face.jpg" class="img-thumbnail rounded mx-auto d-block" alt="face">
+      <div class="describing">Nazywam się Michał Niemiec i wiele robię w życiu. </div>
+      <a href="about" class="myButton">Dalej</a>
+    </div>
+  </div>
 </div>
