--- a/portfolio/src/app/page-not-found/page-not-found.component.html
+++ b/portfolio/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,3 @@
 <p>
-  page-not-found works!
+  <img class="img-fluid" src="http://www.shoemoney.com/wp-content/uploads/2014/06/404-error.png" alt="error">
 </p>
