--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 	<div class="wrapper">
 		<div class="centered">
 			<div class="greeting">Witaj na moim portfolio!</div>
-			<img src="./assets/img/face.jpg" class="img-thumbnail rounded mx-auto d-block" alt="face">
+			<div class="img-circle mx-auto d-block img-fluid"></div>
 			<div class="describing">Nazywam się Michał Niemiec i wiele robię w życiu. </div>
 			<a href="about" class="myButton">Dalej</a>
 		</div>
