--- a/portfolio/src/app/shared/nav/nav.component.html
+++ b/portfolio/src/app/shared/nav/nav.component.html
@@ -1,37 +1,23 @@
-<nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" routerLink="/">Portfolio</a>
-  <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
-  <form class="form-inline float-xs-right">
-      <!--<input class="form-control" type="text" placeholder="Search" name="name" [(ngModel)]="user">-->
-      <label *ngIf="!(af.auth | async)">Please log in</label>
-      <button class="btn btn-outline-success" type="submit"(click)="login()" *ngIf="!(af.auth | async)">Login</button>
-      <label *ngIf="(af.auth | async)">Hello {{ (af.auth | async)?.google.displayName | uppercase}}</label>
-      <button class="btn btn-outline-success" type="submit"(click)="logout()" *ngIf="(af.auth | async)">Logout</button>
-    </form>
-  <div class="collapse navbar-toggleable-md" id="navbarResponsive">
-    
-    <ul class="nav navbar-nav">
-      
-      <li *ngFor="let link of links" class="nav-item">
-        <a class="nav-link" routerLink="/{{link}}" routerLinkActive="active">{{link}}</a>
-      </li>
+<nav class="navbar navbar-dark bg-inverse">
+	<a class="navbar-brand" routerLink="/about">Portfolio</a>
+	<button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+		aria-expanded="false" aria-label="Toggle navigation"></button>
+	<form class="form-inline float-xs-right">
+		<button class="btn btn-outline-success" type="submit" (click)="login()" *ngIf="!(af.auth | async)">Login</button>
+		<label style="color: whitesmoke" *ngIf="(af.auth | async)">Witaj, {{ (af.auth | async)?.google.displayName}}</label>
+		<button class="btn btn-outline-success" type="submit" (click)="logout()" *ngIf="(af.auth | async)">Logout</button>
+	</form>
+	<div class="collapse navbar-toggleable-md" id="navbarResponsive">
+		<ul class="nav navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" routerLink="/web" routerLinkActive="active">Web development</a>
+			</li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
-      </li>
+				<a class="nav-link" routerLink="/cooking" routerLinkActive="active">Gotowanie</a>
+			</li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/err">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="responsiveNavbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="responsiveNavbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-    
-    
-  </div>
-  
+				<a class="nav-link" routerLink="/music" routerLinkActive="active">Muzyka</a>
+			</li>
+		</ul>
+	</div>
 </nav>
