--- a/portfolio/src/app/cooking/cooking.component.html
+++ b/portfolio/src/app/cooking/cooking.component.html
@@ -1,6 +1,10 @@
 <app-nav></app-nav>
 <div class="container-fluid">
-	<p>
-		cooking works!
-	</p>
+	<div class="col-lg-3 col-sm-5 skills">
+		<img class="img-circle img-fluid" src="../assets/img/cooking.jpg" alt="">
+		<h1 class="cooking">Gotowanie</h1>
+	</div>
+	<div class="col-lg-9 col-sm-7">
+		
+	</div>
 </div>
