--- a/portfolio/src/app/webdev/skills/skills.component.html
+++ b/portfolio/src/app/webdev/skills/skills.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-	<img class="img-circle img-fluid" src="../assets/img/coding.jpg" alt="">
+	<img class="img-fluid" src="../assets/img/coding.jpg" alt="coding">
 	<h1 class="web">Web development</h1>
 </div>
 <div class="row skills">
-	<p>Opanowane technologie WEB:</p>
+	<strong>Opanowane technologie WEB:</strong>
 	<ul>
 		<li>HTML 5
 			<progress class="progress progress-success" value="99" max="100"></progress>
 		</li>
 		<li>CSS 3
-			<progress class="progress progress-success" value="67" max="100"></progress>
+			<progress class="progress progress-success" value="72" max="100"></progress>
 		</li>
     <li>BOOTSTRAP 3
       <progress class="progress progress-info" value="80" max="100"></progress>
@@ -18,7 +18,7 @@
       <progress class="progress progress-danger" value="90" max="100"></progress>
 		</li>
     <li>PHP
-      <progress class="progress progress-warning" value="57" max="100"></progress>
+      <progress class="progress progress-warning" value="66" max="100"></progress>
 		</li>
 		<li>C#/MVC.NET
       <progress class="progress progress-info" value="35" max="100"></progress>
