--- a/portfolio/src/app/music/music.component.html
+++ b/portfolio/src/app/music/music.component.html
@@ -1,6 +1,10 @@
 <app-nav></app-nav>
 <div class="container-fluid">
-	<p>
-		music works!
-	</p>
+	<div class="col-lg-3 col-sm-5 skills">
+		<img class="img-fluid" src="../assets/img/guitar.jpg" alt="">
+		<h1 class="music">Muzyka</h1>
+	</div>
+	<div class="col-lg-9 col-sm-7">
+
+	</div>
 </div>
