--- a/portfolio/src/app/webdev/project/project-detail/project-detail.component.html
+++ b/portfolio/src/app/webdev/project/project-detail/project-detail.component.html
@@ -1,17 +1,25 @@
-<div class="row project-detail" *ngIf="project">
-	<div class="col-md-6 details">
-		<h2>{{project.name}} details!</h2>
-		<div><label>id: </label>{{project.id}}</div>
-		<div>
-			<label>name: </label>
-			<input [(ngModel)]="project.name" placeholder="name" />
+<div class="row project-detail" id="{{ project.id }}" *ngIf="project">
+	<div class="col-lg-6 details">
+		<br>
+		<h3>{{ project.name }}</h3>
+		<br>
+		<div class="tech">
+			<span *ngFor="let tech of project.techs">
+				<img src="{{ tech | techIcon }}" alt="{{ tech }}">
+			</span>
 		</div>
+		<br>
+		<div class="info"><p>{{ project.info }}</p></div>
+		<!--div>
+			<label>Info: </label>
+			<input [(ngModel)]="project.info" placeholder="info" />
+		</div-->
 	</div>
-	<div class="col-md-6">
+	<div class="col-lg-6">
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner" role="listbox">
 				<div *ngFor="let img of project.imgs" class="carousel-item" [ngClass]="{active: isActive(img)}">
-					<img class="image mx-auto d-block" src="{{img}}" alt="{{img}}">
+					<img class="image mx-auto d-block" src="{{ project.path + img }}" alt="{{img}}">
 				</div>
 			</div>
 			<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -24,5 +32,4 @@
 			</a>
 		</div>
 	</div>
-	
 </div>
